# odbclib

./: Doxyfile  Makefile  Makefile.am  configure.ac  cursor.txt  data.mdb  doxygen-automake.am  odbclib.vim  raii.txt  tags  uml.txt
include/: columnmetadata.hpp  component.hpp  config.hpp  decimal.hpp  diaginfo.hpp  diaginfoeventargs.hpp  disposeeventargs.hpp  environment.hpp  guid.hpp  handle.hpp  macros.hpp  odbclib.hpp  resultset.hpp  resultsetmetadata.hpp  session.hpp  transaction.hpp  types.hpp
include/utils/event/: event.hdr.tcc  event.hpp  event.implement  event.template  eventlistener.hdr.tcc  eventlistener.hpp  eventlistener.implement  eventlistener.template
m4/: ax_check_windows_odbc32.m4
src/: Makefile.am  buffer.cpp  buffer.hpp  columnmetadata.cpp  columnmetadata.hpp  component.cpp  component.hpp  config.hpp  connection.cpp  connection.hpp  cursor.cpp  cursor.hpp  debug.cpp  debug.hpp  decimal.cpp  descriptor.cpp  descriptor.hpp  diaginfo.cpp  diaginfo.hpp  diaginfoeventargs.cpp  disposable.hpp  environment.cpp  environment.hpp  guid.cpp  handle.cpp  handle.hpp  handle_object.cpp  handle_object.hpp  macros.hpp  main.cpp  nullable.cpp  nullable.hpp  odbc_error.cpp  odbc_error.hpp  odbcxx.hpp  resultset.cpp  resultset.hpp  resultsetmetadata.cpp  rowset.cpp  rowset.hpp  (+9 more)
src/utils/: utils.hpp
src/utils/event/: event.src.tcc  eventlistener.hpp  eventlistener.src.tcc
test/: main.cpp  test1.cpp
tests/: test1.cpp
