nobase_pkginclude_HEADERS = \
./config.hpp \
./connection.hpp \
./cursor.hpp \
./descriptor.hpp \
./diaginfo.hpp \
./environment.hpp \
./handle.hpp \
./handle_object.hpp \
./odbcxx.hpp \
./resultset.hpp \
./rowset.hpp \
./session.hpp \
./statement.hpp \
./transaction.hpp \
./utils.hpp \
./odbc_error.hpp \
./buffer.hpp
