nobase_pkginclude_HEADERS = \
./columnmetadata.cpp \
./columnmetadata.hpp \
./component.cpp \
./component.hpp \
./config.hpp \
./connection.cpp \
./connection.hpp \
./cursor.cpp \
./cursor.hpp \
./debug.cpp \
./debug.hpp \
./decimal.cpp \
./decimal.hpp \
./diaginfo.cpp \
./diaginfo.hpp \
./diaginfoeventargs.cpp \
./diaginfoeventargs.hpp \
./disposable.hpp \
./disposeeventargs.hpp \
./environment.cpp \
./environment.hpp \
./guid.cpp \
./guid.hpp \
./handle.cpp \
./handle.hpp \
./macros.hpp \
./nullable.cpp \
./nullable.hpp \
./odbclib.hpp \
./resultset.cpp \
./resultset.hpp \
./resultsetmetadata.cpp \
./resultsetmetadata.hpp \
./session.cpp \
./session.hpp \
./statement.cpp \
./statement.hpp \
./transaction.cpp \
./transaction.hpp \
./types.cpp \
./types.hpp \
./utils/event/event.hpp \
./utils/event/eventlistener.hpp \
./utils/utils.hpp \
./utils/event/event.hdr.tcc \
./utils/event/event.src.tcc \
./utils/event/eventlistener.hdr.tcc \
./utils/event/eventlistener.src.tcc
